[gd_scene load_steps=8 format=2]

[ext_resource path="res://GUI/PauseLayer/Pause_layer.gd" type="Script" id=1]
[ext_resource path="res://GUI/Buttons/ButtonStyle_Hover.tres" type="StyleBox" id=2]
[ext_resource path="res://GUI/Buttons/ButtonStyle_Pressed.tres" type="StyleBox" id=3]
[ext_resource path="res://GUI/Buttons/ButtonStyle_Focussed.tres" type="StyleBox" id=4]
[ext_resource path="res://GUI/Buttons/ButtonStyle_Normal.tres" type="StyleBox" id=5]
[ext_resource path="res://Assets/Fonts/m5x7_16.tres" type="DynamicFont" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.247059, 0.156863, 0.196078, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.407843, 0.219608, 0.423529, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 1
anti_aliasing = false

[node name="Pause_layer" type="CanvasLayer"]
pause_mode = 2
layer = 11
script = ExtResource( 1 )
Main_Menu = "res://TitleScreen/Main_Menu.tscn"

[node name="Control" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 60
custom_constants/margin_top = 30
custom_constants/margin_left = 60
custom_constants/margin_bottom = 30

[node name="Panel" type="Panel" parent="Control/MarginContainer"]
margin_left = 60.0
margin_top = 30.0
margin_right = 260.0
margin_bottom = 150.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/Panel/MarginContainer"]
margin_left = 16.0
margin_top = 28.0
margin_right = 184.0
margin_bottom = 91.0
size_flags_vertical = 4
custom_constants/separation = 1

[node name="Resume" type="Button" parent="Control/MarginContainer/Panel/MarginContainer/VBoxContainer"]
margin_right = 168.0
margin_bottom = 15.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 6 )
text = "Resume"

[node name="Options" type="Button" parent="Control/MarginContainer/Panel/MarginContainer/VBoxContainer"]
margin_top = 16.0
margin_right = 168.0
margin_bottom = 31.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 6 )
text = "Options"

[node name="MainMenu" type="Button" parent="Control/MarginContainer/Panel/MarginContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 168.0
margin_bottom = 47.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 6 )
text = "Main Menu"

[node name="Exit" type="Button" parent="Control/MarginContainer/Panel/MarginContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 168.0
margin_bottom = 63.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 6 )
text = "Exit"
[connection signal="pressed" from="Control/MarginContainer/Panel/MarginContainer/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Control/MarginContainer/Panel/MarginContainer/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Control/MarginContainer/Panel/MarginContainer/VBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="Control/MarginContainer/Panel/MarginContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
